--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,31 +1,22 @@
 server {
     listen 80;
-    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+    server_name _;  # or suzookaizokuhunter.com;
 
     client_max_body_size 100M;
 
-    # 1. React => http://react:3000
+    # React 前端 => http://react:3000
     location / {
         proxy_pass http://react:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # 2. Express => http://express:3000
+    # Express => /api
     location /api/ {
         proxy_pass http://express:3000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # 3. FastAPI => http://fastapi:8000
+    # FastAPI => /api/fastapi/
     location /api/fastapi/ {
         rewrite ^/api/fastapi/(.*)$ /$1 break;
         proxy_pass http://fastapi:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
