--- a/.env
+++ b/.env
@@ -1,45 +1,33 @@
-########################################
-# PostgreSQL (for Express, etc.)
-########################################
+# PostgreSQL
 POSTGRES_USER=suzoo
 POSTGRES_PASSWORD=KaiShieldDbPass2023!
 POSTGRES_DB=suzoo_db
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
-########################################
+
 # JWT 秘鑰
-########################################
 JWT_SECRET=ZmVkOWY4ZDItNWU3MC00NDM5LW
 
-########################################
-# Cloudinary (上傳圖片 / 影片)
-########################################
+# Cloudinary 設定
 CLOUDINARY_CLOUD_NAME=dhjoabbkj
 CLOUDINARY_API_KEY=559164261664744
 CLOUDINARY_API_SECRET=CBLyksZYM6udCSY2-Jhv3a4E5dI
 
-########################################
-# RapidAPI (真實侵權爬蟲, e.g. Youtube / Shopee Scraper)
-########################################
+# RapidAPI (DMCA 相關)
 RAPIDAPI_KEY=71dbbf39f7msh794002260b4e71bp1025e2jsn652998e0f81a
 
-########################################
-# Ganache (本地Ethereum私有鏈)
-########################################
+# Ganache (Ethereum 私有鏈)
 GANACHE_HOST=ganache
 GANACHE_PORT=8545
 
-########################################
-# IPFS 容器
-########################################
+# IPFS
 IPFS_API_URL=http://ipfs:5001
 
-########################################
-# DMCA (示例：空檔案MD5)
-########################################
+# DMCA 違規指紋
 DMCA_BANNED_FINGERPRINTS=d41d8cd98f00b204e9800998ecf8427e
 
-########################################
-# Node環境
-########################################
+# Node 環境
 NODE_ENV=production
+
+# FastAPI URL
+FASTAPI_URL=http://fastapi:8000
