--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,22 +1,31 @@
 server {
     listen 80;
-    server_name _;  # or suzookaizokuhunter.com;
+    server_name _;
 
     client_max_body_size 100M;
 
-    # React 前端 => http://react:3000
+    # 代理 React 前端
     location / {
         proxy_pass http://react:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # Express => /api
+    # 代理 Express API（例如所有 /api/ 請求）
     location /api/ {
         proxy_pass http://express:3000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # FastAPI => /api/fastapi/
+    # 代理 FastAPI API
     location /api/fastapi/ {
         rewrite ^/api/fastapi/(.*)$ /$1 break;
         proxy_pass http://fastapi:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
