--- a/express/package.json
+++ b/express/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.9.0",
+    "sharp": "^0.32.0",
     "web3": "^1.8.2"
   }
 }
