--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,7 +14,7 @@ server {
 
     # 代理 Express API（例如所有 /api/ 請求）
     location /api/ {
-        proxy_pass http://express:3000/;
+        proxy_pass http://express:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
