--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name _;
+    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
     client_max_body_size 100M;
 
