--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+# .env
 # PostgreSQL
 POSTGRES_USER=suzoo
 POSTGRES_PASSWORD=KaiShieldDbPass2023!
@@ -8,7 +9,7 @@ POSTGRES_PORT=5432
 # JWT 秘鑰
 JWT_SECRET=ZmVkOWY4ZDItNWU3MC00NDM5LW
 
-# Cloudinary 設定
+# Cloudinary
 CLOUDINARY_CLOUD_NAME=dhjoabbkj
 CLOUDINARY_API_KEY=559164261664744
 CLOUDINARY_API_SECRET=CBLyksZYM6udCSY2-Jhv3a4E5dI
@@ -29,5 +30,7 @@ DMCA_BANNED_FINGERPRINTS=d41d8cd98f00b204e9800998ecf8427e
 # Node 環境
 NODE_ENV=production
 
-# FastAPI URL
+# FastAPI
 FASTAPI_URL=http://fastapi:8000
+
+# (若有保留) DATABASE_URL=postgresql://suzoo:KaiShieldDbPass2023!@postgres:5432/suzoo_db
