--- a/express/Dockerfile
+++ b/express/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 COPY package.json ./
 RUN npm install
 
-COPY . .  # 複製 server.js, db.js, etc.
+COPY 
 
 EXPOSE 3000
 CMD ["node", "server.js"]
