--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,7 @@
 services:
+  ###################################################################
+  # 1. PostgreSQL 資料庫
+  ###################################################################
   postgres:
     image: postgres:15-alpine
     container_name: suzoo_postgres
@@ -16,6 +19,9 @@ services:
     networks:
       - suzoo_net
 
+  ###################################################################
+  # 2. Ganache (私有鏈)
+  ###################################################################
   ganache:
     image: trufflesuite/ganache-cli:latest
     container_name: suzoo_ganache
@@ -25,6 +31,9 @@ services:
     networks:
       - suzoo_net
 
+  ###################################################################
+  # 3. IPFS
+  ###################################################################
   ipfs:
     image: ipfs/go-ipfs:latest
     container_name: suzoo_ipfs
@@ -37,6 +46,9 @@ services:
     networks:
       - suzoo_net
 
+  ###################################################################
+  # 4. FastAPI
+  ###################################################################
   fastapi:
     build:
       context: ./fastapi
@@ -54,6 +66,9 @@ services:
     networks:
       - suzoo_net
 
+  ###################################################################
+  # 5. Express 後端
+  ###################################################################
   express:
     build:
       context: ./express
@@ -75,6 +90,9 @@ services:
     networks:
       - suzoo_net
 
+  ###################################################################
+  # 6. Crawler (DMCA 爬蟲模組)
+  ###################################################################
   crawler:
     build:
       context: ./crawler
@@ -92,6 +110,9 @@ services:
     expose:
       - "8081"
 
+  ###################################################################
+  # 7. React 前端
+  ###################################################################
   react:
     build:
       context: ./frontend
@@ -109,6 +130,9 @@ services:
     networks:
       - suzoo_net
 
+  ###################################################################
+  # 8. Nginx 反向代理
+  ###################################################################
   nginx:
     build:
       context: ./nginx
