--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # PostgreSQL
 POSTGRES_USER=suzoo
 POSTGRES_PASSWORD=KaiShieldDbPass2023!
-POSTGRES_DB=suzoo_db
+POSTGRES_DB=suzoo
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 
