更新 Cospace 中的修改，覆蓋至 GitHub

--- a/.env
+++ b/.env
@@ -1,15 +1,14 @@
-# .env
-# PostgreSQL
+# PostgreSQL 資料庫設定
 POSTGRES_USER=suzoo
 POSTGRES_PASSWORD=KaiShieldDbPass2023!
 POSTGRES_DB=suzoo
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 
-# JWT 秘鑰
+# JWT 秘鑰 (用於簽發與驗證 token)
 JWT_SECRET=ZmVkOWY4ZDItNWU3MC00NDM5LW
 
-# Cloudinary
+# Cloudinary 設定 (圖片上傳與管理)
 CLOUDINARY_CLOUD_NAME=dhjoabbkj
 CLOUDINARY_API_KEY=559164261664744
 CLOUDINARY_API_SECRET=CBLyksZYM6udCSY2-Jhv3a4E5dI
@@ -21,16 +20,24 @@ RAPIDAPI_KEY=71dbbf39f7msh794002260b4e71bp1025e2jsn652998e0f81a
 GANACHE_HOST=ganache
 GANACHE_PORT=8545
 
-# IPFS
+# IPFS 服務 URL
 IPFS_API_URL=http://ipfs:5001
 
-# DMCA 違規指紋
+# DMCA 違規指紋 (多個用逗號分隔)
 DMCA_BANNED_FINGERPRINTS=d41d8cd98f00b204e9800998ecf8427e
 
-# Node 環境
+# Node 執行環境
 NODE_ENV=production
 
-# FastAPI
+# FastAPI 服務 URL
 FASTAPI_URL=http://fastapi:8000
 
-# (若有保留) DATABASE_URL=postgresql://suzoo:KaiShieldDbPass2023!@postgres:5432/suzoo_db
+# Express 服務認證 (供爬蟲或其他服務登入使用)
+EXPRESS_LOGIN_USER=your_express_username
+EXPRESS_LOGIN_PASS=your_express_password
+
+# Express 服務基本 URL (容器內部 DNS)
+EXPRESS_BASE_URL=http://express:3000
+
+# (可選) 完整資料庫連線字串
+DATABASE_URL=postgresql://suzoo:KaiShieldDbPass2023!@postgres:5432/suzoo
