--- a/crawler/Dockerfile
+++ b/crawler/Dockerfile
@@ -1,7 +1,12 @@
 FROM node:18-slim
+
 WORKDIR /app
+
 COPY package.json ./
 RUN npm install
+
 COPY . .
+
 EXPOSE 8081
-CMD ["node","index.js"]
+
+CMD ["npm", "start"]
