--- a/crawler/package.json
+++ b/crawler/package.json
@@ -5,9 +5,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
     "axios": "^1.3.6",
-    "puppeteer": "^19.11.1"
+    "dotenv": "^16.0.3"
   }
 }
