--- a/express/Dockerfile
+++ b/express/Dockerfile
@@ -1,20 +1,17 @@
-# express/Dockerfile
-
 FROM node:18-slim
 
 WORKDIR /app
 
-# 複製 package.json, package-lock.json (若有)
-COPY package*.json ./
+# 安裝 curl 以供健康檢查使用
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
+# 複製依賴定義檔並安裝依賴
+COPY package*.json ./
 RUN npm install
 
-# 複製其餘程式碼 (server.js, db.js, etc.)
+# 複製全部程式碼
 COPY . .
-
-# 若原本一行是: COPY . .  # 複製 server.js, db.js, ...
-# 請拆成兩行，避免 Docker parser 把 # 當成指令的一部分
 
 EXPOSE 3000
 
-CMD ["node", "server.js"]
+CMD ["npm", "start"]
