--- a/express/package.json
+++ b/express/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "express-backend",
+  "name": "suzoo-express",
   "version": "1.0.0",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.3.0",
+    "axios": "^1.3.6",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.32.0",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "form-data": "^4.0.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
-    "pg": "^8.9.0",
-    "sharp": "^0.32.0",
-    "web3": "^1.8.2"
+    "pg": "^8.8.0",
+    "sharp": "^0.32.1",
+    "web3": "^1.10.0",
+    "cloudinary": "^1.30.0"
   }
 }
