--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,29 +1,27 @@
 server {
     listen 80;
-    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+    server_name localhost;
 
-    client_max_body_size 100M;
-
-    # 代理 React 前端
+    # React 前端代理
     location / {
         proxy_pass http://react:3000;
+        try_files $uri $uri/ /index.html =404;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # 代理 Express API（例如所有 /api/ 請求）
-    location /api/ {
-        proxy_pass http://express:3000;
+    # Express API 代理
+    location /api/node/ {
+        proxy_pass http://express:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # 代理 FastAPI API
-    location /api/fastapi/ {
-        rewrite ^/api/fastapi/(.*)$ /$1 break;
-        proxy_pass http://fastapi:8000;
+    # FastAPI API 代理
+    location /api/py/ {
+        proxy_pass http://fastapi:8000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
