--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,26 +2,40 @@ server {
     listen 80;
     server_name localhost;
 
-    # React 前端代理
+    # ------------------------------------------------
+    # (A) 反向代理到 React (SPA 前端)
+    # ------------------------------------------------
     location / {
         proxy_pass http://react:3000;
-        try_files $uri $uri/ /index.html =404;
+        # 由於 React 已經是 serve -s build，所以一般不需要 try_files;
+        # 若需要 SPA fallback, 可在 react 端自行處理 404 => index.html
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # Express API 代理
+    # ------------------------------------------------
+    # (B) Express API 經由 /api/node/ => Express
+    # ------------------------------------------------
     location /api/node/ {
-        proxy_pass http://express:3000/;
+        # rewrite 將 /api/node/... => /api/... 方便 Express 接收
+        rewrite ^/api/node/(.*)$ /api/$1 break;
+        proxy_pass http://express:3000;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # FastAPI API 代理
+    # ------------------------------------------------
+    # (C) FastAPI API 經由 /api/py/ => FastAPI
+    # ------------------------------------------------
     location /api/py/ {
-        proxy_pass http://fastapi:8000/;
+        # rewrite /api/py/... => /... 讓 FastAPI 看起來就像從根路由開始
+        rewrite ^/api/py/(.*)$ /$1 break;
+        proxy_pass http://fastapi:8000;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
