--- a/express/package.json
+++ b/express/package.json
@@ -1,14 +1,17 @@
 {
   "name": "suzoo-express",
   "version": "1.0.0",
+  "description": "Express server for suzoo project",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^1.3.6",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.1",
+    "cloudinary": "^1.30.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -16,7 +19,6 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
     "sharp": "^0.32.1",
-    "web3": "^1.10.0",
-    "cloudinary": "^1.30.0"
+    "web3": "^1.10.0"
   }
 }
