--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,18 +1,33 @@
+# /etc/nginx/conf.d/default.conf
+
 server {
     listen 80;
     server_name localhost;
+
+    # 建議隱藏版本資訊
+    server_tokens off;
+
+    # 如果需要大檔案上傳，可增加此設定
+    client_max_body_size 50m;
 
     # ------------------------------------------------
     # (A) 反向代理到 React (SPA 前端)
     # ------------------------------------------------
     location / {
-        proxy_pass http://react:3000;
-        # 由於 React 已經是 serve -s build，所以一般不需要 try_files;
-        # 若需要 SPA fallback, 可在 react 端自行處理 404 => index.html
+        # 若需要 SPA fallback，可啟用 try_files
+        # try_files $uri /index.html;
+
+        proxy_pass http://react:3000; 
         proxy_http_version 1.1;
+        # 若無 websockets需求，可移除
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
+
+        # 一般代理建議包含:
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # ------------------------------------------------
@@ -22,10 +37,13 @@ server {
         # rewrite 將 /api/node/... => /api/... 方便 Express 接收
         rewrite ^/api/node/(.*)$ /api/$1 break;
         proxy_pass http://express:3000;
+
+        # 同步設置標頭
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # ------------------------------------------------
@@ -35,9 +53,11 @@ server {
         # rewrite /api/py/... => /... 讓 FastAPI 看起來就像從根路由開始
         rewrite ^/api/py/(.*)$ /$1 break;
         proxy_pass http://fastapi:8000;
+
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
