--- a/fastapi/Dockerfile
+++ b/fastapi/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.10-slim
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
+    curl \
     gcc \
     build-essential \
     libpq-dev \
