--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,17 +1,6 @@
 server {
     listen 80;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
-    return 301 https://$host$request_uri;
-}
-
-server {
-    listen 443 ssl;
-    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
-
-    ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
 
     location / {
         proxy_pass http://react:3000;
@@ -20,6 +9,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    # 如有 API 配置，請加入對應 location，例如：
     location /api/node/ {
         proxy_pass http://express:3000/;
         proxy_set_header Host $host;
