--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,23 @@
+# Redirect 所有 HTTP 請求到 HTTPS
 server {
     listen 80;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+    return 301 https://$host$request_uri;
+}
 
+# HTTPS Server Block
+server {
+    listen 443 ssl;
+    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+
+    # SSL 憑證設定（使用 Certbot 簽發的憑證）
+    ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
+    # 反向代理到 React 前端（請確認 react 容器內部埠號為 3000）
     location / {
         proxy_pass http://react:3000;
         proxy_set_header Host $host;
@@ -9,13 +25,15 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # 如有 API 配置，請加入對應 location，例如：
+    # 反向代理到 Express (API)
     location /api/node/ {
         proxy_pass http://express:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
+    # 反向代理到 FastAPI (API)
     location /api/py/ {
         proxy_pass http://fastapi:8000/;
         proxy_set_header Host $host;
