--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
 
   ganache:
     image: trufflesuite/ganache-cli:latest
-    # 移除 container_name 以避免內部 KeyError 問題
+    # 不設定 container_name 以避免內部合併錯誤
     command: ganache-cli --host 0.0.0.0 --port 8545 --accounts 5 --defaultBalanceEther 100
     ports:
       - "8545:8545"
@@ -117,22 +117,25 @@ services:
       retries: 3
 
   nginx:
-  build:
-    context: ./nginx
-    dockerfile: Dockerfile
-  container_name: suzooka_nginx
-  depends_on:
-    - react
-    - express
-    - fastapi
-  ports:
-    - "80:80"
-    - "443:443"          # 映射 HTTPS 端口
-  volumes:
-    - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-  restart: unless-stopped
-  networks:
-    - suzoo_net
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    container_name: suzooka_nginx
+    depends_on:
+      - react
+      - express
+      - fastapi
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+    restart: unless-stopped
+    networks:
+      - suzoo_net
+
+networks:
+  suzoo_net:
     driver: bridge
 
 volumes:
