--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,6 +10,9 @@ server {
     listen 443 ssl;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
+    # 新增解析 Docker 內部 DNS，127.0.0.11 為 Docker 默認 DNS 伺服器地址
+    resolver 127.0.0.11 valid=30s;
+
     # SSL 憑證設定（使用 Certbot 簽發的憑證）
     ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
@@ -17,7 +20,7 @@ server {
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # 反向代理到 React 前端（請確認 react 容器內部埠號為 3000）
+    # 反向代理到 React 前端（容器內部端口：3000）
     location / {
         proxy_pass http://react:3000;
         proxy_set_header Host $host;
@@ -25,7 +28,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # 反向代理到 Express (API)
+    # 反向代理到 Express API（容器內部端口：3000）
     location /api/node/ {
         proxy_pass http://express:3000/;
         proxy_set_header Host $host;
@@ -33,7 +36,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # 反向代理到 FastAPI (API)
+    # 反向代理到 FastAPI API（容器內部端口：8000）
     location /api/py/ {
         proxy_pass http://fastapi:8000/;
         proxy_set_header Host $host;
