--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,19 +1,10 @@
-# Redirect 所有 HTTP 請求到 HTTPS
-server {
-    listen 80;
-    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
-    return 301 https://$host$request_uri;
-}
-
-# HTTPS Server Block
 server {
     listen 443 ssl;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # 新增解析 Docker 內部 DNS，127.0.0.11 為 Docker 默認 DNS 伺服器地址
+    # 新增解析 Docker 內部 DNS（127.0.0.11 為 Docker 默認內部 DNS）
     resolver 127.0.0.11 valid=30s;
 
-    # SSL 憑證設定（使用 Certbot 簽發的憑證）
     ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
