--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,8 +1,16 @@
+# Redirect 所有 HTTP 請求到 HTTPS
+server {
+    listen 80;
+    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+    return 301 https://$host$request_uri;
+}
+
+# HTTPS Server Block
 server {
     listen 443 ssl;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # 新增解析 Docker 內部 DNS（127.0.0.11 為 Docker 默認內部 DNS）
+    # 讓 nginx 使用 Docker 內建 DNS（127.0.0.11）解析容器名稱
     resolver 127.0.0.11 valid=30s;
 
     ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
