--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,11 +1,11 @@
-# Redirect 所有 HTTP 請求到 HTTPS
+# 1) 將所有 HTTP 80 埠的請求轉到 HTTPS
 server {
     listen 80;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
     return 301 https://$host$request_uri;
 }
 
-# HTTPS Server Block
+# 2) HTTPS Server Block
 server {
     listen 443 ssl;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
@@ -13,13 +13,15 @@ server {
     # 讓 nginx 使用 Docker 內建 DNS（127.0.0.11）解析容器名稱
     resolver 127.0.0.11 valid=30s;
 
-    ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
+    # 指定憑證路徑 (Let's Encrypt)
+    ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
+
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # 反向代理到 React 前端（容器內部端口：3000）
+    # ============ 反向代理到 React (service name: react) ============
     location / {
         proxy_pass http://react:3000;
         proxy_set_header Host $host;
@@ -27,15 +29,18 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # 反向代理到 Express API（容器內部端口：3000）
+    # ============ 反向代理到 Express (service name: express) ============
     location /api/node/ {
+        # 可以先 rewrite 如果 Express 內部預期 /api/... => 依需求決定
+        # rewrite ^/api/node/(.*)$ /api/$1 break;
+
         proxy_pass http://express:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # 反向代理到 FastAPI API（容器內部端口：8000）
+    # ============ 反向代理到 FastAPI (service name: fastapi) ============
     location /api/py/ {
         proxy_pass http://fastapi:8000/;
         proxy_set_header Host $host;
