--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,28 +21,25 @@ server {
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # ============ 反向代理到 React (service name: react) ============
+    # ============ 反向代理到 React (service name: suzoo_react) ============
     location / {
-        proxy_pass http://react:3000;
+        proxy_pass http://suzoo_react:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # ============ 反向代理到 Express (service name: express) ============
+    # ============ 反向代理到 Express (service name: suzoo_express) ============
     location /api/node/ {
-        # 可以先 rewrite 如果 Express 內部預期 /api/... => 依需求決定
-        # rewrite ^/api/node/(.*)$ /api/$1 break;
-
-        proxy_pass http://express:3000/;
+        proxy_pass http://suzoo_express:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # ============ 反向代理到 FastAPI (service name: fastapi) ============
+    # ============ 反向代理到 FastAPI (service name: suzoo_fastapi) ============
     location /api/py/ {
-        proxy_pass http://fastapi:8000/;
+        proxy_pass http://suzoo_fastapi:8000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
