--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,7 +21,7 @@ server {
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # ============ 反向代理到 React (service name: suzoo_react) ============
+    # (A) 反向代理到 React => service name: suzoo_react
     location / {
         proxy_pass http://suzoo_react:3000;
         proxy_set_header Host $host;
@@ -29,7 +29,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # ============ 反向代理到 Express (service name: suzoo_express) ============
+    # (B) 反向代理到 Express => service name: suzoo_express
     location /api/node/ {
         proxy_pass http://suzoo_express:3000/;
         proxy_set_header Host $host;
@@ -37,7 +37,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # ============ 反向代理到 FastAPI (service name: suzoo_fastapi) ============
+    # (C) 反向代理到 FastAPI => service name: suzoo_fastapi
     location /api/py/ {
         proxy_pass http://suzoo_fastapi:8000/;
         proxy_set_header Host $host;
