--- a/express/package.json
+++ b/express/package.json
@@ -18,6 +18,8 @@
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",     
+    "sequelize": "^6.31.0",    
     "sharp": "^0.32.1",
     "web3": "^1.10.0"
   }
