--- a/express/package.json
+++ b/express/package.json
@@ -13,13 +13,14 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.30.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.0",        
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
-    "pg-hstore": "^2.3.4",     
-    "sequelize": "^6.31.0",    
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.31.0",
     "sharp": "^0.32.1",
     "web3": "^1.10.0"
   }
