--- a/express/Dockerfile
+++ b/express/Dockerfile
@@ -1,21 +1,18 @@
+# express/Dockerfile
 FROM node:18-slim
 
 WORKDIR /app
 
-# 安裝 curl (或其他需要套件)
-RUN apt-get update && apt-get install -y \
-    curl \
-    # 如果要在同容器執行 `ipfs add`, 需安裝 ipfs CLI (可選)
-    # ipfs 可能需獨立安裝, 但大部分時候是另外一個容器
-    && rm -rf /var/lib/apt/lists/*
+# 安裝必要工具 (如 curl)
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
-# 1) 複製 package.json & package-lock.json
+# 複製 package.json / package-lock.json
 COPY package*.json ./
 
-# 2) 安裝 production 依賴 (包含 web3, sequelize, etc.)
+# 安裝生產環境依賴
 RUN npm install --production
 
-# 3) 複製全部程式碼 (含 contracts/, utils/, routes/)
+# 複製全部程式碼 (含 routes/, utils/, contracts/, server.js)
 COPY . .
 
 EXPOSE 3000
