--- a/express/package.json
+++ b/express/package.json
@@ -6,9 +6,6 @@
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.30.0",
@@ -22,6 +19,7 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.31.0",
     "sharp": "^0.32.1",
+    "stripe": "^11.12.0",         
     "web3": "^1.10.0"
   }
 }
