--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -132,23 +132,22 @@ services:
   # 8) Nginx
   # -------------------
   suzoo_nginx:
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
-    depends_on:
-      - suzoo_react
-      - suzoo_express
-      - suzoo_fastapi
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      # 如果您有 Let's Encrypt 憑證，請在此掛載:
-      # - /path/to/certs:/etc/letsencrypt:ro
-    restart: unless-stopped
-    networks:
-      - suzoo_net
+  build:
+    context: ./nginx
+    dockerfile: Dockerfile
+  depends_on:
+    - suzoo_react
+    - suzoo_express
+    - suzoo_fastapi
+  ports:
+    - "80:80"
+    - "443:443"
+  volumes:
+    - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+    - /etc/letsencrypt:/etc/letsencrypt:ro    # ★ 挂载宿主机 /etc/letsencrypt -> 容器内同路径
+  restart: unless-stopped
+  networks:
+    - suzoo_net
 
 # -------------------
 # Network & Volumes
