--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,7 +60,7 @@ services:
     networks:
       - suzoo_net
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD-SHELL", "curl -f http://localhost:8000/health"]
       interval: 10s
       timeout: 5s
       retries: 3
@@ -84,7 +84,7 @@ services:
     networks:
       - suzoo_net
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      test: ["CMD-SHELL", "curl -f http://localhost:3000/health"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -123,7 +123,7 @@ services:
     networks:
       - suzoo_net
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000"]
+      test: ["CMD-SHELL", "curl -f http://localhost:3000"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -132,22 +132,22 @@ services:
   # 8) Nginx
   # -------------------
   suzoo_nginx:
-  build:
-    context: ./nginx
-    dockerfile: Dockerfile
-  depends_on:
-    - suzoo_react
-    - suzoo_express
-    - suzoo_fastapi
-  ports:
-    - "80:80"
-    - "443:443"
-  volumes:
-    - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-    - /etc/letsencrypt:/etc/letsencrypt:ro    # ★ 挂载宿主机 /etc/letsencrypt -> 容器内同路径
-  restart: unless-stopped
-  networks:
-    - suzoo_net
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    depends_on:
+      - suzoo_react
+      - suzoo_express
+      - suzoo_fastapi
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro  #  ← 宿主機 Let’s Encrypt → 容器
+    restart: unless-stopped
+    networks:
+      - suzoo_net
 
 # -------------------
 # Network & Volumes
