--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,4 @@
-# nginx/default.conf
-
-# 1) HTTP 80 轉址至 HTTPS
+# 1) HTTP 80 => 轉址至 HTTPS
 server {
     listen 80;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
