--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,81 +1,74 @@
-#---------------------------------------------------------------------
-# 1) HTTP 80 => 強制轉址至 HTTPS (443)
-#---------------------------------------------------------------------
+# ===============================
+# 1) HTTP => HTTPS 重導
+# ===============================
 server {
     listen 80;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
     return 301 https://$host$request_uri;
 }
 
-#---------------------------------------------------------------------
-# 2) HTTPS Server Block
-#---------------------------------------------------------------------
+# ===============================
+# 2) HTTPS 區塊
+# ===============================
 server {
     listen 443 ssl;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # -----------------------------------------------------------------
-    # Docker 內建 DNS: 透過 127.0.0.11 解析 service 名稱
-    # -----------------------------------------------------------------
+    # 內建 Docker DNS (127.0.0.11)
     resolver 127.0.0.11 valid=30s;
 
-    # -----------------------------------------------------------------
-    # SSL 憑證 (Let's Encrypt) - 容器內路徑
-    # -----------------------------------------------------------------
+    # Let's Encrypt 憑證路徑
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
-    ssl_protocols       TLSv1.2 TLSv1.3;
-    ssl_ciphers         HIGH:!aNULL:!MD5;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # -----------------------------------------------------------------
-    # A) 反向代理到 React (suzoo_react:3000)
-    # -----------------------------------------------------------------
+    # ===============================
+    # (A) React (對應 suzoo_react:3000)
+    # ===============================
     location / {
         proxy_pass http://suzoo_react:3000;
-        
-        # 建議加上以下 headers, 讓 Nginx 轉發時帶上 Host/IP 以便前端顯示等
+
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # -----------------------------------------------------------------
-    # B) 反向代理到 Express (suzoo_express:3000)
-    # -----------------------------------------------------------------
-    location /api/node/ {
-        # 若您希望將 /api/node/xxx -> /api/xxx, 
-        # 可自行在此加上 rewrite 規則, e.g.:
-        # rewrite ^/api/node/(.*)$ /api/$1 break;
-
+    # ===============================
+    # (B) Express (對應 suzoo_express:3000)
+    #   => /api/... 對應 express:3000/...
+    # ===============================
+    location /api/ {
         proxy_pass http://suzoo_express:3000/;
-        
+
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # -----------------------------------------------------------------
-    # C) 反向代理到 FastAPI (suzoo_fastapi:8000)
-    # -----------------------------------------------------------------
+    # ===============================
+    # (C) FastAPI (對應 suzoo_fastapi:8000)
+    #   => /api/py/... 對應 fastapi:8000/...
+    # ===============================
     location /api/py/ {
         proxy_pass http://suzoo_fastapi:8000/;
-        
+
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
-
 }
